Refactor emojis in Hero and Contact to use Emoji component

--- a/src/data/opera.yml
+++ b/src/data/opera.yml
@@ -1,3 +1,52 @@
+################
+# HADRIAN (2018)
+################
+
+- title:
+    text: Hadrian
+
+  category: Opera
+
+  tags:
+  - Canadian Opera Company
+
+  image: '../images/opera/hadrian.jpg'
+  alt: Marble bust of Hadrian, emporer of Rome from 117 to 138 AD.
+
+  link: https://www.coc.ca/productions/16480
+
+  features:
+  - emoji: 📺
+    text: Hear the <a href="https://www.youtube.com/watch?v=beZUnHkqU9k" target="_blank" rel="noopener" class="link-inline">Entr'acte from the beginning of Act II</a>.
+  - emoji: 🎧
+    text: Hear a <a href="https://youtu.be/hHqV15oRulE?t=18159" target="_blank" rel="noopener" class="link-inline">discussion and performance</a> of selected excerpts.
+  - emoji: 📖
+    text: Get Rufus Wainwright's take on <a href="http://www.27east.com/news/article.cfm/Westhampton-Beach-Surrounding-Areas/563805/Rufus-Wainwright-On-His-Own-Terms-New-Music-Old-Music-And-A-Taste-Of-The-Roman-Empire" target="_blank" rel="noopener" class="link-inline">critics and opening nights</a>.
+  - emoji: 📖
+    text: Read about Rufus' <a href="https://www.theguardian.com/theobserver/2018/jun/23/rufus-wainwright-opera-transfigured-second-classical-release-change-direction?platform=hootsuite" target="_blank" rel="noopener" class="link-inline">transition from pop to opera</a>.
+  - emoji: 📖
+    text: Discover the <a href="https://www.citybeat.com/music/music-feature/article/20999010/rufus-wainwright-workshops-his-latest-opera-in-cincinnati-ahead-of-its-october-premiere" target="_blank" rel="noopener" class="link-inline">longtime influence of opera</a> on Rufus' music.
+  - emoji: 📖
+    text: Learn why Rufus thinks <a href="http://antinousgaygod.blogspot.com/2018/01/rufus-wainwrights-hadrian-opera-to.html" target="_blank" rel="noopener" class="link-inline">opera is the perfect way</a> to tell Hadrian's story.
+
+  details:
+  - name: Company
+    value: Canadian Opera Company
+  - name: Opera
+    value: Hadrian (world premiere)
+  - name: Role
+    value: Third Senator (cover)
+  - name: Composer
+    value: Rufus Wainwright
+  - name: Librettist
+    value: Daniel MacIvor
+  - name: Conductor
+    value: Johannes Debus
+  - name: Director
+    value: Peter Hinton
+  - name: Dates
+    value: October 13-27, 2018
+    
 ########################
 # THE NIGHTINGALE (2018)
 ########################
@@ -13,15 +62,21 @@
   image: '../images/opera/nightingale-4.jpg'
   alt: Michael Uloth (left), Anatoli Sivko, Lauren Eberwein and Jane Archibald in the Canadian Opera Company production of The Nightingale & Other Short Fables. Image by Michael Cooper.
 
-  link: https://www.coc.ca/productions/13109
+  link: https://www.coc.ca/
 
   features:
-  - Watch a quick <a href="https://www.youtube.com/watch?v=4EnnRWLdy8Q" target="_blank" rel="noopener" class="link-inline">preview</a>.
-  - See <a href="https://www.youtube.com/watch?v=svmQ-DsDZQM" target="_blank" rel="noopener" class="link-inline">audience reactions</a>.
-  - Hear soprano Jane Archibald <a href="https://www.youtube.com/watch?v=0brQMYk4nEQ" target="_blank" rel="noopener" class="link-inline">describe the production</a>.
-  - Watch the orchestra pit transform into a <a href="https://www.youtube.com/watch?v=t6cPgqBfomA" target="_blank" rel="noopener" class="link-inline">67,000-litre pool</a>.
-  - See the acrobats use light to create <a href="https://www.youtube.com/watch?v=jYqGZ0oH_JE" target="_blank" rel="noopener" class="link-inline">shadow puppets</a>.
-  - See the show's <a href="https://www.youtube.com/watch?v=-Ae8ureLNKw" target="_blank" rel="noopener" class="link-inline">75 unique puppets</a>.
+  - emoji: 📺
+    text: Watch a quick <a href="https://www.youtube.com/watch?v=4EnnRWLdy8Q" target="_blank" rel="noopener" class="link-inline">preview</a>.
+  - emoji: 📺
+    text: See <a href="https://www.youtube.com/watch?v=svmQ-DsDZQM" target="_blank" rel="noopener" class="link-inline">audience reactions</a>.
+  - emoji: 📺
+    text: Hear soprano Jane Archibald <a href="https://www.youtube.com/watch?v=0brQMYk4nEQ" target="_blank" rel="noopener" class="link-inline">describe the production</a>.
+  - emoji: 📺
+    text: Watch the orchestra pit transform into a <a href="https://www.youtube.com/watch?v=t6cPgqBfomA" target="_blank" rel="noopener" class="link-inline">67,000-litre pool</a>.
+  - emoji: 📺
+    text: See the acrobats use light to create <a href="https://www.youtube.com/watch?v=jYqGZ0oH_JE" target="_blank" rel="noopener" class="link-inline">shadow puppets</a>.
+  - emoji: 📺
+    text: See the show's <a href="https://www.youtube.com/watch?v=-Ae8ureLNKw" target="_blank" rel="noopener" class="link-inline">75 unique puppets</a>.
 
   details:
   - name: Company
@@ -55,11 +110,13 @@
   image: ../images/opera/anna-bolena-1.jpg
   alt: Bruce Sledge, Christian Van Horn, Thomas Goerz and Sondra Radvanovsky in the Canadian Opera Company production of Anna Bolena. Photo by Michael Cooper.
 
-  link: https://www.coc.ca/productions/13097
+  link: https://www.coc.ca/
 
   features:
-  - Watch a quick <a href="https://www.youtube.com/watch?v=W6kBk35uU-s" target="_blank" rel="noopener" class="link-inline">preview</a>.
-  - Take a <a href="https://www.youtube.com/watch?v=2x4Ce1mFkD4" target="_blank" rel="noopener" class="link-inline">backstage tour</a>.
+  - emoji: 📺
+    text: Watch a quick <a href="https://www.youtube.com/watch?v=W6kBk35uU-s" target="_blank" rel="noopener" class="link-inline">preview</a>.
+  - emoji: 📺
+    text: Take a <a href="https://www.youtube.com/watch?v=2x4Ce1mFkD4" target="_blank" rel="noopener" class="link-inline">backstage tour</a>.
 
   details:
   - name: Company
@@ -151,7 +208,8 @@
     link: http://operagoto.com/kopernikus-review/
   
   features:
-  - Watch a quick <a href="https://www.youtube.com/watch?v=D1klhVfHu0c" target="_blank" rel="noopener" class="link-inline">preview</a>.
+  - emoji: 📺
+    text: Watch a quick <a href="https://www.youtube.com/watch?v=D1klhVfHu0c" target="_blank" rel="noopener" class="link-inline">preview</a>.
   
   details:
   - name: Company
@@ -198,7 +256,8 @@
     link: https://torontomasqueblog.wordpress.com/2017/05/01/two-extraordinary-concerts-and-an-announcement/
 
   features:
-  - Watch a <a href="https://www.youtube.com/watch?v=pAketmvRsUU" target="_blank" rel="noopener" class="link-inline">full performance</a>.
+  - emoji: 📺
+    text: Watch a <a href="https://www.youtube.com/watch?v=pAketmvRsUU" target="_blank" rel="noopener" class="link-inline">full performance</a>.
 
   details:
   - name: Company
@@ -233,8 +292,10 @@
   link: https://www.coc.ca
 
   features:
-  - Watch a quick <a href="https://www.youtube.com/watch?v=kewzS7-loV0" target="_blank" rel="noopener" class="link-inline">preview</a>.
-  - Learn <a href="https://www.youtube.com/watch?v=MRtRmFuqQA8" target="_blank" rel="noopener" class="link-inline">5 cool things</a> about The Magic Flute.
+  - emoji: 📺
+    text: Watch a quick <a href="https://www.youtube.com/watch?v=kewzS7-loV0" target="_blank" rel="noopener" class="link-inline">preview</a>.
+  - emoji: 📺
+    text: Learn <a href="https://www.youtube.com/watch?v=MRtRmFuqQA8" target="_blank" rel="noopener" class="link-inline">5 cool things</a> about The Magic Flute.
 
   details:
   - name: Company
@@ -314,8 +375,10 @@
   link: https://www.opera-lyon.com/
 
   features:
-  - Watch a quick <a href="https://www.youtube.com/watch?v=AWfMxNRnqsM" target="_blank" rel="noopener" class="link-inline">preview</a> (in French).
-  - Read about the <a href="https://culturebox.francetvinfo.fr/opera-classique/opera/greve-a-l-opera-de-lyon-le-rossignol-suspendu-jusqu-a-la-fin-de-la-semaine-92725" target="_blank" rel="noopener" class="link-inline">technicians strike</a> that shortened the run (in French).
+  - emoji: 📺
+    text: Watch a quick <a href="https://www.youtube.com/watch?v=AWfMxNRnqsM" target="_blank" rel="noopener" class="link-inline">preview</a> (in French).
+  - emoji: 📺
+    text: Read about the <a href="https://culturebox.francetvinfo.fr/opera-classique/opera/greve-a-l-opera-de-lyon-le-rossignol-suspendu-jusqu-a-la-fin-de-la-semaine-92725" target="_blank" rel="noopener" class="link-inline">technicians strike</a> that shortened the run (in French).
 
   details:
   - name: Company
@@ -365,8 +428,10 @@
     link: http://www.heedthehedonist.com/two-shows-left-this-weekend-don-pasquale
   
   features:
-  - Watch a quick <a href="https://www.youtube.com/watch?v=WvjInQBT3RQ" target="_blank" rel="noopener" class="link-inline">preview</a>.
-  - Watch director Peter Kazaras explain <a href="https://www.youtube.com/watch?v=RZOgODyUB8A" target="_blank" rel="noopener" class="link-inline">what inspired the production</a>.
+  - emoji: 📺
+    text: Watch a quick <a href="https://www.youtube.com/watch?v=WvjInQBT3RQ" target="_blank" rel="noopener" class="link-inline">preview</a>.
+  - emoji: 📺
+    text: Watch director Peter Kazaras explain <a href="https://www.youtube.com/watch?v=RZOgODyUB8A" target="_blank" rel="noopener" class="link-inline">what inspired the production</a>.
 
   details:
   - name: Company
@@ -411,7 +476,8 @@
     link: http://thesunbreak.com/2011/11/21/a-riveting-werther-from-seattle-operas-young-artists/
   
   features:
-  - Watch director Peter Kazaras <a href="https://www.youtube.com/watch?v=zS1xnVewSxY" target="_blank" rel="noopener" class="link-inline">describe the production</a>.
+  - emoji: 📺
+    text: Watch director Peter Kazaras <a href="https://www.youtube.com/watch?v=zS1xnVewSxY" target="_blank" rel="noopener" class="link-inline">describe the production</a>.
 
   details:
   - name: Company
@@ -455,8 +521,10 @@
     link: https://definitelytheopera.wordpress.com/2011/05/04/ariadne-auf-toronto/
   
   features:
-  - Watch a quick <a href="https://vimeo.com/23017911" target="_blank" rel="noopener" class="link-inline">preview</a>.
-  - Watch director Neil Armfield and conductor Sir Andrew Davis <a href="https://www.youtube.com/watch?v=QCb5_1LPXzE" target="_blank" rel="noopener" class="link-inline">describe the production</a>.
+  - emoji: 📺
+    text: Watch a quick <a href="https://vimeo.com/23017911" target="_blank" rel="noopener" class="link-inline">preview</a>.
+  - emoji: 📺
+    text: Watch director Neil Armfield and conductor Sir Andrew Davis <a href="https://www.youtube.com/watch?v=QCb5_1LPXzE" target="_blank" rel="noopener" class="link-inline">describe the production</a>.
 
   details:
   - name: Company
@@ -498,7 +566,8 @@
     link: https://learn.coc.ca/coc-news?entryid=1733
   
   features:
-  - Watch a quick <a href="https://www.youtube.com/watch?v=oK6MTuYBoG0" target="_blank" rel="noopener" class="link-inline">preview</a>.
+  - emoji: 📺
+    text: Watch a quick <a href="https://www.youtube.com/watch?v=oK6MTuYBoG0" target="_blank" rel="noopener" class="link-inline">preview</a>.
 
   details:
   - name: Company
@@ -582,8 +651,10 @@
   - quotation: Michael Uloth proved superior as a singer (and vastly superior as an actor) to his counterpart.
     source: Arthur Kaptainis, National Post
     link: http://nationalpost.com/entertainment/music/the-coc-ensemble-gets-magical
+  
   features:
-  - Watch a quick <a href="https://www.youtube.com/watch?v=uFqnhM7Qc64" target="_blank" rel="noopener" class="link-inline">preview</a>.
+  - emoji: 📺
+    text: Watch a quick <a href="https://www.youtube.com/watch?v=uFqnhM7Qc64" target="_blank" rel="noopener" class="link-inline">preview</a>.
 
   details:
   - name: Company
@@ -620,8 +691,10 @@
   link: https://www.coc.ca
 
   features:
-  - Watch a quick <a href="https://www.youtube.com/watch?v=DqXpUDcoW_U" target="_blank" rel="noopener" class="link-inline">preview</a>.
-  - See director Yoshi Oida <a href="https://www.youtube.com/watch?v=GUY5FgMvaL0" target="_blank" rel="noopener" class="link-inline"> describe the production</a>.
+  - emoji: 📺
+    text: Watch a quick <a href="https://www.youtube.com/watch?v=DqXpUDcoW_U" target="_blank" rel="noopener" class="link-inline">preview</a>.
+  - emoji: 📺
+    text: See director Yoshi Oida <a href="https://www.youtube.com/watch?v=GUY5FgMvaL0" target="_blank" rel="noopener" class="link-inline"> describe the production</a>.
 
   details:
   - name: Company
@@ -658,9 +731,12 @@
   link: https://www.coc.ca
 
   features:
-  - Watch director Tim Albery <a href="https://www.youtube.com/watch?v=QYwbSMWO_j0" target="_blank" rel="noopener" class="link-inline">describe the production</a>.
-  - Hear soprano Sondra Radvanovsky reflect on <a href="https://www.youtube.com/watch?v=wJI8kZ_S1jg" target="_blank" rel="noopener" class="link-inline">her debut as Aida</a>.
-  - See the show's <a href="https://www.youtube.com/watch?v=n-OmD8e3GKs" target="_blank" rel="noopener" class="link-inline">6 custom-built trumpets</a>.
+  - emoji: 📺
+    text: Watch director Tim Albery <a href="https://www.youtube.com/watch?v=QYwbSMWO_j0" target="_blank" rel="noopener" class="link-inline">describe the production</a>.
+  - emoji: 📺
+    text: Hear soprano Sondra Radvanovsky reflect on <a href="https://www.youtube.com/watch?v=wJI8kZ_S1jg" target="_blank" rel="noopener" class="link-inline">her debut as Aida</a>.
+  - emoji: 📺
+    text: See the show's <a href="https://www.youtube.com/watch?v=n-OmD8e3GKs" target="_blank" rel="noopener" class="link-inline">6 custom-built trumpets</a>.
 
   details:
   - name: Company
@@ -800,7 +876,8 @@
   link: https://www.coc.ca
 
   features:
-  - Watch set designer Paul Edwards <a href="https://www.youtube.com/watch?v=vtQWIQgTc9s" target="_blank" rel="noopener" class="link-inline"> describe the production's sets</a>.
+  - emoji: 📺
+    text: Watch set designer Paul Edwards <a href="https://www.youtube.com/watch?v=vtQWIQgTc9s" target="_blank" rel="noopener" class="link-inline"> describe the production's sets</a>.
 
   details:
   - name: Company
@@ -880,8 +957,10 @@
     link: http://www.stage-door.com/Theatre/2009/Entries/2009/10/21_The_Nightingale_and_Other_Short_Fables.html
 
   features:
-  - Watch director Robert Lepage <a href="https://www.youtube.com/watch?v=jGGc1r4wl6E" target="_blank" rel="noopener" class="link-inline">describe the production</a> (6 parts).
-  - See puppet designer Michael Curry demonstrate the show's <a href="https://www.youtube.com/watch?v=QGu_mwN8v3A" target="_blank" rel="noopener" class="link-inline">custom-built puppets</a>.
+  - emoji: 📺
+    text: Watch director Robert Lepage <a href="https://www.youtube.com/watch?v=jGGc1r4wl6E" target="_blank" rel="noopener" class="link-inline">describe the production</a> (6 parts).
+  - emoji: 📺
+    text: See puppet designer Michael Curry demonstrate the show's <a href="https://www.youtube.com/watch?v=QGu_mwN8v3A" target="_blank" rel="noopener" class="link-inline">custom-built puppets</a>.
 
   details:
   - name: Company
@@ -1592,7 +1671,8 @@
   link: http://openears.ca
 
   features:
-  - Watch a 2010 performance of "Cell Life" at <a href="https://www.youtube.com/watch?v=3D4J468U2sU" target="_blank" rel="noopener" class="link-inline">Stratford Summer Music</a>.
+  - emoji: 📺
+    text: Watch a 2010 performance of "Cell Life" at <a href="https://www.youtube.com/watch?v=3D4J468U2sU" target="_blank" rel="noopener" class="link-inline">Stratford Summer Music</a>.
 
   details:
   - name: Company
