--- a/src/data/opera.yml
+++ b/src/data/opera.yml
@@ -27,7 +27,7 @@
   - emoji: 📖
     text: Discover the <a href="https://www.citybeat.com/music/music-feature/article/20999010/rufus-wainwright-workshops-his-latest-opera-in-cincinnati-ahead-of-its-october-premiere" target="_blank" rel="noopener" class="link-inline">longtime influence of opera</a> on Rufus' music.
   - emoji: 📖
-    text: Learn why Rufus thinks <a href="http://antinousgaygod.blogspot.com/2018/01/rufus-wainwrights-hadrian-opera-to.html" target="_blank" rel="noopener" class="link-inline">opera is the perfect way</a> to tell Hadrian's story.
+    text: Learn why Rufus thinks <a href="http://antinousgaygod.blogspot.com/2018/01/rufus-wainwrights-hadrian-opera-to.html" target="_blank" rel="noopener" class="link-inline">opera is the perfect art form</a> to tell Hadrian's story.
 
   details:
   - name: Company
@@ -377,7 +377,7 @@
   features:
   - emoji: 📺
     text: Watch a quick <a href="https://www.youtube.com/watch?v=AWfMxNRnqsM" target="_blank" rel="noopener" class="link-inline">preview</a> (in French).
-  - emoji: 📺
+  - emoji: 📖
     text: Read about the <a href="https://culturebox.francetvinfo.fr/opera-classique/opera/greve-a-l-opera-de-lyon-le-rossignol-suspendu-jusqu-a-la-fin-de-la-semaine-92725" target="_blank" rel="noopener" class="link-inline">technicians strike</a> that shortened the run (in French).
 
   details:
