--- a/src/data/opera.yml
+++ b/src/data/opera.yml
@@ -17,7 +17,7 @@
 
   features:
   - emoji: 📺
-    text: Hear the <a href="https://www.youtube.com/watch?v=beZUnHkqU9k" target="_blank" rel="noopener" class="link-inline">Entr'acte from the beginning of Act II</a>.
+    text: Hear the <a href="https://www.youtube.com/watch?v=beZUnHkqU9k" target="_blank" rel="noopener" class="link-inline">Entr'acte that begins Act II</a>.
   - emoji: 🎧
     text: Hear a <a href="https://youtu.be/hHqV15oRulE?t=18159" target="_blank" rel="noopener" class="link-inline">discussion and performance</a> of selected excerpts.
   - emoji: 📖
