--- a/src/data/opera.yml
+++ b/src/data/opera.yml
@@ -11,7 +11,7 @@
   - Canadian Opera Company
 
   image: '../images/opera/hadrian.jpg'
-  alt: Marble bust of Hadrian, emporer of Rome from 117 to 138 AD.
+  alt: Marble bust of Hadrian, emperor of Rome from 117 to 138 AD.
 
   link: https://www.coc.ca/productions/16480
 
@@ -575,7 +575,7 @@
   - name: Opera
     value: The Nightingale & Other Short Fables
   - name: Role
-    value: Emporer (cover), Bonze
+    value: Emperor (cover), Bonze
   - name: Composer
     value: Igor Stravinsky
   - name: Conductor
@@ -968,7 +968,7 @@
   - name: Opera
     value: The Nightingale & Other Short Fables
   - name: Role
-    value: Emporer (cover), Bonze
+    value: Emperor (cover), Bonze
   - name: Composer
     value: Igor Stravinsky
   - name: Conductor
