--- a/src/data/websites.yml
+++ b/src/data/websites.yml
@@ -203,6 +203,11 @@
 
   link: https://www.pomegranateopera.com
 
+  reviews:
+  - quotation: 'Our fantastic website was made by the team at <a href="https://twitter.com/coffeescreative" target="_blank" rel="noopener" class="link-inline">@coffeescreative</a> right here in Toronto! Designers and developers who are also <a href="https://twitter.com/hashtag/operasingers?src=hash" target="_blank" rel="noopener" class="link-inline">#operasingers</a>! Thanks <a href="https://twitter.com/Sbelltenor" target="_blank" rel="noopener" class="link-inline">@Sbelltenor</a> <a href="https://twitter.com/ooloth" target="_blank" rel="noopener" class="link-inline">@ooloth</a> <a href="https://twitter.com/teiyakasahara" target="_blank" rel="noopener" class="link-inline">@teiyakasahara</a>.'
+    source: Pomegranate Opera, Twitter
+    link: https://twitter.com/pomopera/status/1039923201533505537?s=12
+
   description: I worked with designer Stephen Bell of <a href="http://coffeeshopcreative.ca" target="_blank" rel="noopener" class="link-inline">Coffeeshop Creative</a> to build a whimsical showcase for the upcoming production of "Pomegranate Opera", a lesbian opera by Amanda Hale and Kye Marshall.
   
   details:
