Add Daniel MacIvor interview to Hadrian details

--- a/src/data/opera.yml
+++ b/src/data/opera.yml
@@ -25,13 +25,13 @@
   - emoji: 📖
     text: Read why Hadrian is a <a href="https://www.thewholenote.com/index.php/newsroom/musical-life/rear-view-mirror/28466-daring-to-walk-the-walk-the-coc-s-hadrian" target="_blank" rel="noopener" class="link-inline">guaranteed success for the COC</a>.
   - emoji: 📖
-    text: Learn Rufus Wainwright's take on <a href="http://www.27east.com/news/article.cfm/Westhampton-Beach-Surrounding-Areas/563805/Rufus-Wainwright-On-His-Own-Terms-New-Music-Old-Music-And-A-Taste-Of-The-Roman-Empire" target="_blank" rel="noopener" class="link-inline">critics and opening nights</a>.
+    text: Learn how Daniel MacIvor approached <a href="https://www.thewholenote.com/index.php/newsroom/beatcolumns-sp-2121861476/choral-opera2/28464-wainwright-s-playwright-daniel-macivor-on-hadrian" target="_blank" rel="noopener" class="link-inline">writing the libretto</a>.
+  - emoji: 📖
+    text: Get Rufus Wainwright's take on <a href="http://www.27east.com/news/article.cfm/Westhampton-Beach-Surrounding-Areas/563805/Rufus-Wainwright-On-His-Own-Terms-New-Music-Old-Music-And-A-Taste-Of-The-Roman-Empire" target="_blank" rel="noopener" class="link-inline">critics and opening nights</a>.
   - emoji: 📖
     text: Read about Rufus' <a href="https://www.theguardian.com/theobserver/2018/jun/23/rufus-wainwright-opera-transfigured-second-classical-release-change-direction?platform=hootsuite" target="_blank" rel="noopener" class="link-inline">transition from pop to opera</a>.
   - emoji: 📖
     text: Discover the <a href="https://www.citybeat.com/music/music-feature/article/20999010/rufus-wainwright-workshops-his-latest-opera-in-cincinnati-ahead-of-its-october-premiere" target="_blank" rel="noopener" class="link-inline">longtime influence of opera</a> on Rufus' music.
-  - emoji: 📖
-    text: Learn why Rufus thinks <a href="http://antinousgaygod.blogspot.com/2018/01/rufus-wainwrights-hadrian-opera-to.html" target="_blank" rel="noopener" class="link-inline">opera is the perfect art form</a> to tell Hadrian's story.
 
   details:
   - name: Company
