Add two Hadrian articles

--- a/src/data/opera.yml
+++ b/src/data/opera.yml
@@ -23,11 +23,13 @@
   - emoji: 🎧
     text: Hear a <a href="https://youtu.be/hHqV15oRulE?t=18159" target="_blank" rel="noopener" class="link-inline">discussion and performance</a> of selected excerpts.
   - emoji: 📖
-    text: Read why Hadrian is a <a href="https://www.thewholenote.com/index.php/newsroom/musical-life/rear-view-mirror/28466-daring-to-walk-the-walk-the-coc-s-hadrian" target="_blank" rel="noopener" class="link-inline">guaranteed success for the COC</a>.
+    text: Read Rufus Wainwright's take on <a href="https://www.coc.ca/COC-news1?Page=1&EntryID=18380" target="_blank" rel="noopener" class="link-inline">his place in the opera world</a>.
+  - emoji: 📖
+    text: Follow tenor Isaiah Bell's <a href="https://www.coc.ca/COC-news1?Page=1&EntryID=18380" target="_blank" rel="noopener" class="link-inline">daily journal</a> during the rehearsal process.
+  - emoji: 📖
+    text: Read why Hadrian may be a <a href="https://www.thewholenote.com/index.php/newsroom/musical-life/rear-view-mirror/28466-daring-to-walk-the-walk-the-coc-s-hadrian" target="_blank" rel="noopener" class="link-inline">guaranteed success for the COC</a>.
   - emoji: 📖
     text: Learn how Daniel MacIvor approached <a href="https://www.thewholenote.com/index.php/newsroom/beatcolumns-sp-2121861476/choral-opera2/28464-wainwright-s-playwright-daniel-macivor-on-hadrian" target="_blank" rel="noopener" class="link-inline">writing the libretto</a>.
-  - emoji: 📖
-    text: Get Rufus Wainwright's take on <a href="http://www.27east.com/news/article.cfm/Westhampton-Beach-Surrounding-Areas/563805/Rufus-Wainwright-On-His-Own-Terms-New-Music-Old-Music-And-A-Taste-Of-The-Roman-Empire" target="_blank" rel="noopener" class="link-inline">critics and opening nights</a>.
   - emoji: 📖
     text: Read about Rufus' <a href="https://www.theguardian.com/theobserver/2018/jun/23/rufus-wainwright-opera-transfigured-second-classical-release-change-direction?platform=hootsuite" target="_blank" rel="noopener" class="link-inline">transition from pop to opera</a>.
   - emoji: 📖
