Switch to developing in HTTP instead of HTTPS

--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "stylelint-no-unsupported-browser-features": "^3.0.0"
   },
   "scripts": {
-    "dev": "gatsby develop --https",
+    "dev": "gatsby develop",
     "build": "gatsby build"
   }
 }
